@@ -1,100 +1,88 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-   <parent>
-     <groupId>org.etk</groupId>
-     <artifactId>tools</artifactId>
-     <version>0.1-Beta1-SNAPSHOT</version>
+  <parent>
+    <groupId>org.etk</groupId>
+    <artifactId>tools</artifactId>
+    <version>0.1-Beta1-SNAPSHOT</version>
   </parent>
 
   <groupId>org.etk.tools</groupId>
   <artifactId>org.etk.tools.sandbox</artifactId>
-  <version>0.1-Beta1-SNAPSHOT</version>
+  <version>0.1</version>
   <name>Engineering Toolkit Framework SandBox</name>
   <description>Engineering Toolkit Framework SandBox</description>
-
-
   <dependencies>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>${javax.servlet.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.ws.rs</groupId>
-        <artifactId>jsr311-api</artifactId>
-        <scope>provided</scope>
-     </dependency>
-      <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.etk.kernel</groupId>
-        <artifactId>org.etk.kernel.reflection</artifactId>
-        <version>${org.etk.kernel.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.etk.kernel</groupId>
-        <artifactId>org.etk.kernel.container</artifactId>
-        <version>${org.etk.kernel.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.etk.core</groupId>
-        <artifactId>org.etk.core.service</artifactId>
-        <version>${org.etk.core.version}</version>
-      </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>${javax.servlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>jsr311-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.etk.kernel</groupId>
+      <artifactId>org.etk.kernel.reflection</artifactId>
+      <version>${org.etk.kernel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.etk.kernel</groupId>
+      <artifactId>org.etk.kernel.container</artifactId>
+      <version>${org.etk.kernel.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.etk.core</groupId>
+      <artifactId>org.etk.core.service</artifactId>
+      <version>${org.etk.core.version}</version>
+    </dependency>
   </dependencies>
+
   <profiles>
     <profile>
-      <id>Java6</id>
-      <activation>
-        <jdk>1.6</jdk>
-      </activation>
-
+      <id>run-chp02a</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.1</version>
+            <executions>
+              <execution>
+                <phase>install</phase>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+                <configuration>
+                  <mainClass>org.etk.sandbox.security.jaas.ch02.Ch02aMain</mainClass>
+                  <arguments>
+                    <argument>-Xdebug</argument>
+                    <argument>-Djava.security.manager</argument>
+                    <argument>-Djava.security.debug=access:failure</argument>
+                    <argument>-Djava.security.policy=${project.build.directory}/classes/conf/chp02a.policy</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
+    
   </profiles>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-sources1</id>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-          <execution>
-            <id>attach-sources2</id>
-            <goals>
-              <goal>test-jar-no-fork</goal>
-            </goals>
-            <phase>test-compile</phase>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  
 
 </project>
